# pontos_culturas_brasil

./: .gitignore  Create.py  LICENSE  List.py  Pontos.py  PontosController.py  README.md  app.py  database1.py  docker-compose.yml  dockerfile.py  home.py  pyproject.toml  requirements.txt
controllers/: pontos_controller.py
models/: pontos.py
services/: database.py
utils/: atualizar.py  create.py  deletar.py  list.py
